# lime

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  ChangeLog  Doxyfile  IMPLEMENTATION_SUMMARY.md  LINT_FORMAT_GUIDE.md  Lime-Letter-14.txt  Lime-Letter-15.txt  Lime-Letter-16.txt  Lime-Reply-14.txt  Lime-Reply-14b.txt  Lime-Reply-15.txt  Lime-Reply-16.txt  Lime-Reply-26.txt  Lime-Reply-27.txt  Makefile  PERFORMANCE_REPORT.md  README.md  README_VALIDATION.md  VALIDATION.md  VALIDATION_RESULTS.md  annotated.html  annotated_dup.js  bench-runner.sh  bench-stats.py  check_memory.sh  classes.html  compare_parsers.sh  conflict_8h.html  conflict_8h.js  conflict_8h_source.html  dependency__resolver_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  (+264 more)
.agent/: README.md
.github/: dependabot.yml
.memelord/: memory.db-wal
.woodpecker/: ci.yml
agent/: BENCHMARK_EXPECTED_RESULTS.md  (+4 more)
bench/: BENCHMARKING.md  BENCHMARK_RESULTS.md  bench_arith_grammar.y  bench_grammar.lime  bench_grammar.y  bench_jit_real_parser.c  bench_json_grammar.y  bench_parse_fanout.c  bench_runtime.c  bench_simd_classify.c  bench_stub.c  extension_overhead.c  glr_overhead.c  jit_comparison.c  jit_tokenizer_vs_hash.c  meson.build  parser_bench.c  run.sh
bench/bench_flex_bison_compare/: bench_arith.l  bench_arith.y  bench_flex_bison_compare.c  bench_json.l  bench_json.y  meson.build
bench/bench_simdjson_compare/: bench_simdjson_compare.cpp  meson.build
bench/lex_state_count/: bench_lex_state_count.c  meson.build
bench/lex_vectorize/: bench_lex_vectorize.c  json_novec.lex  json_vec.lex  meson.build
bench/rust_compare/: .gitignore  Cargo.toml  README.md  bench_results.txt  fixture.json  json.c  json.h  json.lex  json.lime  make_fixture.py  make_fixture_v2.py
bench/rust_compare/src/: json_lalrpop.lalrpop  json_lexer.rs  json_lexer_memchr.rs  json_lexer_pdfa.rs  json_lexer_simd.rs  json_parser.rs  json_tok.rs  lib.rs
contrib/duckdb_features/: Makefile  duckdb_features.c  duckdb_grammar.lime  duckdb_semantics.c  duckdb_semantics.h  meson.build  test_queries.sql
contrib/edn_literals/: Makefile  edn_grammar.lime  edn_literals.c  edn_semantics.c  edn_semantics.h  meson.build  test_queries.sql
contrib/oracle_compat/: Makefile  meson.build  oracle_compat.c  oracle_compat.h  oracle_grammar.lime  oracle_semantics.c  oracle_semantics.h  test_oracle.c  test_queries.sql
examples/pg_bootscanner/: bootscanner.lex  meson.build  test_bootscanner.c
examples/plugin_template/: meson.build  plugin_host.c  plugin_smoke.c  sql_plugin.c
src/: conflict.c  conflict.h  conflict_detector.c  context_switch.c  dependency_resolver.c  dependency_resolver.h  disambiguation.c  emit_c_skin_bison.c  emit_rust.c  emit_rust_skin_chumsky.c  emit_rust_skin_lalrpop.c  emit_rust_skin_nom.c  emit_rust_skin_pest.c  execution_policy.c  extension.c  extension.h  extension_registry.c  glr.c  grammar_context.c  jit_codegen.c  jit_context.c  jit_inline.c  jit_inline.h  jit_policy.c  jit_tokenizer.c  lime_ast.c  lime_error.c  merkle_tree.c  merkle_tree.h  meson.build  mod_serialize.c  mod_serialize.h  multi_grammar.c  parse_context.c  parse_engine.c  parse_glr.c  parser_composition.c  parser_composition.h  parser_fork.c  parser_manager.c  (+18 more)
src/lex/: emit_c_skin_flex.c  emit_rust_lex.c  emit_rust_skin_logos.c  lex_ast.c  lex_ast.h  lex_compile.c  lex_compile.h  lex_dfa.c  lex_dfa.h  lex_dfa_min.c  lex_emit.c  lex_emit.h  lex_introspect.c  lex_introspect.h  lex_main.c  lex_nfa.c  lex_nfa.h  lex_parse.c  lex_parse.h  lex_pretty.c  lex_pretty.h  lex_regex.c  lex_regex.h  lex_resolve.c  lex_resolve.h  lex_tokenize.c  lex_tokenize.h
src/lsp/: lsp_completion.c  lsp_diagnostics.c  lsp_diagnostics.h  lsp_diagnostics_async.c  lsp_diagnostics_async.h  lsp_documents.c  lsp_documents.h  lsp_format.c  lsp_format.h  lsp_json.c  lsp_json.h  lsp_main.c  lsp_navigation.c  lsp_navigation.h  lsp_protocol.c  lsp_protocol.h  lsp_references.c  lsp_rename.c  lsp_semantic_tokens.c  meson.build
tests/: TESTING.md  aot_error_grammar.y  ft_base_grammar.lime  he_grammar.lime  hr_grammar.lime  hs_grammar.lime  hu_grammar.lime  meson.build  posix_shim.h  test_action_string_literal.c  test_action_string_literal.h  test_action_string_literal_grammar.y  test_admissibility.c  test_alternation.c  test_alternation_grammar.y  test_aot_equivalence.c  test_aot_error_actions.c  test_claims_proof.c  test_codegen_strict_warnings.c  test_compat.h  test_compiler_context.c  test_compose_first_token.c  test_composition_e2e.c  test_concurrent.c  test_conflict_detector.c  test_context_switch_e2e.c  test_context_switch_error.c  test_context_switch_unit.c  test_coverage_boost.c  test_default_reduce.c  test_default_reduce_grammar.y  test_dependency_resolver.c  test_destructor.c  test_destructor.h  test_destructor_grammar.y  test_diagnostics.c  test_diagnostics_grammar.y  test_dialect.c  test_dialect_grammar.lime  test_diff_conflicts.c  (+167 more)
tests/composition_e2e_fixtures/: json_plugin.c  sql_lite_plugin.c  xml_plugin.c
tests/diff_conflicts_fixtures/: another_conflicting_ext.lime  base.lime  clean_ext.lime  conflicting_base.lime  conflicting_ext.lime  resolving_ext.lime  swap_conflicts_ext.lime
tests/extends_fixtures/: ansi_sql.lime  mysql.lime  oracle.lime  unified.lime
tests/test_lint_fixtures/: clean.lime  e001_undeclared_rhs.lime  e002_undeclared_prec.lime  e003_duplicate_token.lime  e004_ambiguous_alias.lime  e005_unreachable_rule.lime  w001_unused_token.lime  w002_unused_precedence.lime  w004_trivial_action.lime  w005_missing_expect.lime  w006_alias_without_action.lime  w007_inconsistent_naming.lime  w008_long_rhs.lime  w009_long_action_body.lime
tests/test_lsp_fixtures/: clean.lime  dirty.lime  rich.lime
tools/: Makefile  convert_format.py  lime-compose  meson.build  parse-manager  parse-manager.1  parse-manager.c  stubs.c
tools/examples/: benchmark-suite.sh  compare-parsers.sh  load-and-test.sh
(+564 files in other folders)
